--- a/public/locale/ru.json
+++ b/public/locale/ru.json
@@ -16,7 +16,7 @@
     "help5": "Забронировать место",
     "help6": "Заказы",
     "help7": "Лучшие цены",
-    "help8": "Быстрое время обработки",
+    "help8": "работать быстро",
     "help9": "Надежная помощь",
     "offer1": "Поможем вам получить визу",
     "offer2": "Мы поможем вам получить визу легко, быстро и надежно.",
