--- a/public/locale/en.json
+++ b/public/locale/en.json
@@ -58,5 +58,8 @@
     "form11": "Reserve",
     "footer1": "WANT TO TRAVEL?",
     "footer2": "Then contact us now",
-    "footer3": "Contact"
+    "footer3": "Contact",
+    "countriesf1": "Visit One of the Cities Now",
+    "countriesf2": "Come Visit",
+    "countriesf3": "Discover our best offers in each city"
 }
