--- a/public/locale/ru.json
+++ b/public/locale/ru.json
@@ -58,5 +58,8 @@
     "form11": "Забронировать",
     "footer1": "ХОТИТЕ ПУТЕШЕСТВОВАТЬ?",
     "footer2": "Свяжитесь с нами прямо сейчас",
-    "footer3": "Связаться"
+    "footer3": "Связаться",
+      "countriesf1": "Путешествуйте по городам",
+  "countriesf2": "Зайдите",
+  "countriesf3": "Откройте для себя лучшие предложения в каждом городе"
 }
