--- a/public/locale/uz.json
+++ b/public/locale/uz.json
@@ -58,5 +58,8 @@
     "form11" : "Band qilish",
     "footer1" : "SAYOHAT QILISHNI XOHLAYSIZMI?",
     "footer2" : "Unda biz bilan hoziroq bog'laning",
-    "footer3" : "Bog'lanish"
+    "footer3" : "Bog'lanish",
+    "countriesf1": "Shaharlardan Biriga Hoziroq",
+  "countriesf2": "Tashrif Buyuring",
+  "countriesf3": "Har bir shahardagi eng yaxshi takliflarimizni kashf eting"
 }
